--- a/css/bear.css
+++ b/css/bear.css
@@ -1,12 +1,12 @@
 html {
   background: url(../images/cliff.jpg) no-repeat top left;
+  position: relative;
 }
 
 #bear {
   position: absolute;
   top: 100px;
-  right: 0;
+  right: 300px;
 }
 
 /* Write your solution here */
-
