--- a/css/dolphin.css
+++ b/css/dolphin.css
@@ -14,14 +14,28 @@ html {
 
 #dolphin {
   position: absolute;
-  top: 100px;
-  right: 400px;
+  top: 400px;
+  right: 100px;
 }
 
 /* Write your solution here */
-@media only screen and(max-width:500px) {
+@media only screen and (max-width:1090px) and (min-width:642px) {
+
   #dolphin {
-    top: 100px;
-    right: 0px;
+    top: 150px;
+    right:0px;
+
   }
+
+}
+
+@media only screen and (max-width:910px) and (min-width:642px) {
+
+  #dolphin {
+    transform: rotateX(10deg);
+    transform: rotateY(10deg);
+    transform: rotateZ(290deg);
+
+  }
+
 }
