--- a/css/monkey.css
+++ b/css/monkey.css
@@ -4,9 +4,18 @@ html {
 
 #monkey {
   position: absolute;
-  top: 550px;
-  right: 120px;
+  top: 600px;
+  right:0px;
+
 }
 
 /* Write your solution here */
+@media only screen and (max-width:1090px) and (min-width:406px) {
 
+  #monkey {
+    top: 10px;
+    right:0px;
+
+  }
+
+}
