--- a/css/ostrich.css
+++ b/css/ostrich.css
@@ -4,9 +4,20 @@ html {
 
 #ostrich {
   position: absolute;
-  top: 50px;
-  right: 0;
+  top: 100px;
+  right: 0px;
 }
 
 /* Write your solution here */
+@media only screen and (max-width: 1357px) {
+  #ostrich {
+  top: -70px;
+  }
 
+}
+@media only screen and (max-width: 950px) {
+  #ostrich {
+  top:70px;
+  }
+
+}
