--- a/css/dolphin.css
+++ b/css/dolphin.css
@@ -19,4 +19,12 @@ html {
 }
 
 /* Write your solution here */
+@media only screen and (max-width:1090px) and (min-width:642px){
+#dolphin
+{
+transform: rotateX(10deg);
+transform: rotateY(10deg);
+transform: rotateZ(10deg);
+}
 
+}
