--- a/css/ostrich.css
+++ b/css/ostrich.css
@@ -7,6 +7,10 @@ html {
   top: 50px;
   right: 0;
 }
+@media only screen and (max-width: 1346px) {
+  #ostrich{
+  top: -50px;
+  }
+}
 
 /* Write your solution here */
-
