--- a/css/dolphin.css
+++ b/css/dolphin.css
@@ -19,4 +19,11 @@ html {
 }
 
 /* Write your solution here */
-
+@media only screen and (min-width: 642px) and (max-width: 1090px)
+{
+  #dolphin {
+    transition: rotate(-0.25turn);
+    right: 0px;
+    top: 100px;
+  }
+}
